--- a/css/favourites.css
+++ b/css/favourites.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-image: url("../images/background\ -\ favouites.jpeg");
+    background-image: url("../background\ -\ favouites.jpeg");
     background-position: center center;
     background-color: #9b74de;
     background-repeat: no-repeat;
@@ -106,4 +106,26 @@ h1{
 
 #clear-all-link:hover::before{
     border: 3px solid rgb(4, 168, 168);
+}
+
+/* Media queries */
+@media (max-width:768px) {
+    .favourite-container{
+        margin: 10px;
+    }
+}
+
+@media (max-width: 640px) {
+    .favourite-container{
+        margin: 10px;
+    }
+    h1{
+        margin-top: 80px;
+    }
+}
+
+@media (orientation: portrait) and (max-width: 640px){
+    .favourite-container{
+        margin: 20px;
+    }
 }
