--- a/css/favourites.css
+++ b/css/favourites.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-image: url("../background\ -\ favouites.jpeg");
+    background-image: url("../images/background\ -\ favouites.jpeg");
     background-position: center center;
     background-color: #9b74de;
     background-repeat: no-repeat;
